--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -84,11 +84,11 @@
                 </div>
             </div>
         {{ end }}
+        
+        {{- if .Site.DisqusShortname }}
+            <hr/>
 
-        {{ if .Params.comments }}
-          <div id="comments" class="thin">
-                {{- partial "comments.html" . -}}
-            </div>
-        {{ end }}
+            <div id="comments" class="thin">{{- partial "comments.html" . -}}</div>
+        {{- end }}
     </main>
 {{ end }}
