--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -92,6 +92,7 @@ blockquote {
   border-image-source: var(--gradient-top);
   border-image-slice: 1;
   font-style: italic;
+  margin: 20px 30px;
 }
 
 .header {
