--- a/web/src/pug/index.pug
+++ b/web/src/pug/index.pug
@@ -1,9 +1,9 @@
-extends _layout.pug
+extends layouts/default.pug
 
 block title
-  title True web artisans → 
-    | A team of professional product managers, UX specialists, talented 
-    | developers and designers, who are ready to share their experience 
+  title True web artisans →
+    | A team of professional product managers, UX specialists, talented
+    | developers and designers, who are ready to share their experience
     | to solve your service and business tasks
 
 block seo_meta
@@ -15,29 +15,29 @@ block content
     div.item.about
       h1 True<span>&mdash;</span>web<span>&ndash;</span>artisans.
       div.spacer
-      p Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web developer, UX evangelist, 
+      p Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web developer, UX evangelist,
         | product manager and founder of this friendly company. Nice to meet you!
       div.spacer
       h2 What are we doing?
-      p I personally and my team of <strong>IT specialists</strong> around the world&nbsp;&mdash; are ready 
+      p I personally and my team of <strong>IT specialists</strong> around the world&nbsp;&mdash; are ready
         | to share our experience to solve your business objectives by:
       ul
         li
-          a(href="/smart-backend-microservices") Smart backend microservices
+          a(href="/#smart-backend-microservices") Smart backend microservices
         li
-          a(href="/progressive-web-applications") Progressive web applications
+          a(href="/#progressive-web-applications") Progressive web applications
         li
-          a(href="/effective-business-websites") Effective business websites
+          a(href="/#effective-business-websites") Effective business websites
         li
-          a(href="/chat-bots-for-messengers") Chat bots for instant messengers
+          a(href="/#chat-bots-for-messengers") Chat bots for instant messengers
       div.spacer
       h2 How do we do this?
-      p First of all, we are developers who know a lot about DX and support 
-        | large projects in the long run. Therefore, all of our projects have 
+      p First of all, we are developers who know a lot about DX and support
+        | large projects in the long run. Therefore, all of our projects have
         | excellent documentation and clear code. It's important!
-      p The simple magic is based on <strong>Go</strong> (Golang), <strong>Python</strong>, 
-        | modern <strong>JavaScript</strong> and <strong>CSS</strong>. Fast and secure 
-        | delivery of developed web apps and microservices to any servers by <strong>Docker</strong> 
+      p The simple magic is based on <strong>Go</strong> (Golang), <strong>Python</strong>,
+        | modern <strong>JavaScript</strong> and <strong>CSS</strong>. Fast and secure
+        | delivery of developed web apps and microservices to any servers by <strong>Docker</strong>
         | containers.
     div.item.logo_char.center
       img.char.sticky(alt="True web artisans logo" src="../images/webartisans-bw-blank_optimized.svg" lazyload="on")
