--- a/web/src/pug/index.pug
+++ b/web/src/pug/index.pug
@@ -2,8 +2,9 @@ extends layouts/default.pug
 
 block title
   title True web artisans →
-    | A team of professional product managers, UX specialists, talented
-    | developers and designers, who are ready to share their experience
+    |
+    | A team of professional product managers, UX specialists, talented developers and designers, who are ready to share their experience
+    |
     | to solve your service and business tasks
 
 block seo_meta
@@ -16,10 +17,12 @@ block content
       h1 True<span>&mdash;</span>web<span>&ndash;</span>artisans.
       div.spacer
       p Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web developer, UX evangelist,
+        |
         | product manager and founder of this friendly company. Nice to meet you!
       div.spacer
       h2 What are we doing?
       p I personally and my team of <strong>IT specialists</strong> around the world&nbsp;&mdash; are ready
+        |
         | to share our experience to solve your business objectives by:
       ul
         li
@@ -32,13 +35,14 @@ block content
           a(href="/#chat-bots-for-messengers") Chat bots for instant messengers
       div.spacer
       h2 How do we do this?
-      p First of all, we are developers who know a lot about DX and support
-        | large projects in the long run. Therefore, all of our projects have
-        | excellent documentation and clear code. It's important!
-      p The simple magic is based on <strong>Go</strong> (Golang), <strong>Python</strong>,
-        | modern <strong>JavaScript</strong> and <strong>CSS</strong>. Fast and secure
-        | delivery of developed web apps and microservices to any servers by <strong>Docker</strong>
-        | containers.
+      p First of all, we are developers who know a lot about DX and support large projects in the long run.
+        |
+        | Therefore, all of our projects have excellent documentation and clear code. It's important!
+      p The simple magic is based on <strong>Go</strong> (Golang), <strong>Python</strong>, modern <strong>JavaScript</strong>
+        |
+        | and <strong>CSS</strong>. Fast and secure delivery of developed web apps and microservices to any servers
+        |
+        | by <strong>Docker</strong> containers.
     div.item.logo_char.center
       img.char.sticky(alt="True web artisans logo" src="../images/webartisans-bw-blank_optimized.svg" lazyload="on")
     div.item.email_contact.center.dark
@@ -46,13 +50,13 @@ block content
       div.spacer
       p Contact us by public email now &darr;<br/>
         a(href="mailto:truewebartisans@gmail.com") truewebartisans@gmail.com
-    div.item.footer
+    div.item.footer.center
       p
         a(href="https://github.com/koddr" target="_blank") GitHub
         |
         | ●
         |
-        a(href="https://instagram.com/true_webartisans" target="_blank") Instagram
+        a(href="https://instagram.com/true_koddr" target="_blank") Instagram
         |
         | ●
         |
