--- a/web/src/pug/layouts/default.pug
+++ b/web/src/pug/layouts/default.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
     head
         meta(charset="utf-8")
-        meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, shrink-to-fit=no")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, scalable=no, shrink-to-fit=no")
         meta(http-equiv="X-UA-Compatible" content="ie=edge,chrome=1")
         meta(name="apple-mobile-web-app-capable" content="yes")
         meta(name="mobile-web-app-capable" content="yes")
