--- a/web/src/pug/index.pug
+++ b/web/src/pug/index.pug
@@ -12,53 +12,101 @@ block seo_meta
   meta(name="description" content="True web artisans — a team of professional product managers, UX specialists, talented developers and designers, who are ready to share their experience to solve your service and business tasks")
 
 block content
-  section.container.animated.slideInUp
-    div.item.about
-      h1 True<span>&mdash;</span>web<span>&ndash;</span>artisans.
+  section.wrapper.animated.slideInUp
+    div.container
+      div.item
+        h1 True<span>&mdash;</span>web<span>&ndash;</span>artisans.
+        div.spacer
+        p Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web developer, UX evangelist,
+          |
+          | product manager and founder of this friendly company. Nice to meet you!
+        div.spacer
+        h2 What are we doing?
+        p I personally and my team of <strong>IT specialists</strong> around the world&nbsp;&mdash; are ready
+          |
+          | to share our experience to solve your business objectives by:
+        ul
+          li
+            a(href="/#smart-backend-microservices") Smart backend microservices
+          li
+            a(href="/#progressive-web-applications") Progressive web applications
+          li
+            a(href="/#effective-business-websites") Effective business websites
+          li
+            a(href="/#chat-bots-for-messengers") Chat bots for instant messengers
+        div.spacer
+        h2 How do we do this?
+        p First of all, we are developers who know a lot about DX and support large projects in the long run.
+          |
+          | Therefore, all of our projects have excellent documentation and clear code. It's important!
+        p The simple magic is based on <strong>Go</strong> (Golang), <strong>Python</strong>, modern <strong>JavaScript</strong>
+          |
+          | and <strong>CSS</strong>. Fast and secure delivery of developed web apps and microservices to any servers
+          |
+          | by <strong>Docker</strong> containers.
+      div.item.center
+        img.char.sticky(alt="True web artisans logo" src="../images/webartisans-bw-blank_optimized.svg" lazyload="on")
+    div.container.hero.gradient-gray
+      div.item.center
+        h3 Have an interesting project?
+        div.spacer
+        p Contact us by public email now&nbsp;&darr;<br/>
+          a(href="mailto:truewebartisans@gmail.com") truewebartisans@gmail.com
+    div.container#smart-backend-microservices
+      div.item.center
+        img.char.sticky(alt="Smart backend microservices" src="../images/scribbbles/scribbble_1.svg" lazyload="on")
+      div.item
+        h2 ●&nbsp;&nbsp;Smart backend microservices
+        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+          |
+          | sources and analyze them.
+    div.container.hero.gradient-gray-inverted
       div.spacer
-      p Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web developer, UX evangelist,
-        |
-        | product manager and founder of this friendly company. Nice to meet you!
+    div.container#progressive-web-applications
+      div.item
+        h2 ●&nbsp;&nbsp;Progressive web applications
+        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+          |
+          | sources and analyze them.
+      div.item.center
+        img.char.sticky(alt="Progressive web applications" src="../images/scribbbles/scribbble_2.svg" lazyload="on")
+    div.container.hero.gradient-gray
       div.spacer
-      h2 What are we doing?
-      p I personally and my team of <strong>IT specialists</strong> around the world&nbsp;&mdash; are ready
-        |
-        | to share our experience to solve your business objectives by:
-      ul
-        li
-          a(href="/#smart-backend-microservices") Smart backend microservices
-        li
-          a(href="/#progressive-web-applications") Progressive web applications
-        li
-          a(href="/#effective-business-websites") Effective business websites
-        li
-          a(href="/#chat-bots-for-messengers") Chat bots for instant messengers
+    div.container#effective-business-websites
+      div.item.center
+        img.char.sticky(alt="Effective business websites" src="../images/scribbbles/scribbble_3.svg" lazyload="on")
+      div.item
+        h2 ●&nbsp;&nbsp;Effective business websites
+        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+          |
+          | sources and analyze them.
+    div.container.hero.gradient-gray-inverted
       div.spacer
-      h2 How do we do this?
-      p First of all, we are developers who know a lot about DX and support large projects in the long run.
-        |
-        | Therefore, all of our projects have excellent documentation and clear code. It's important!
-      p The simple magic is based on <strong>Go</strong> (Golang), <strong>Python</strong>, modern <strong>JavaScript</strong>
-        |
-        | and <strong>CSS</strong>. Fast and secure delivery of developed web apps and microservices to any servers
-        |
-        | by <strong>Docker</strong> containers.
-    div.item.logo_char.center
-      img.char.sticky(alt="True web artisans logo" src="../images/webartisans-bw-blank_optimized.svg" lazyload="on")
-    div.item.email_contact.center.dark
-      h3 Have an interesting project?
-      div.spacer
-      p Contact us by public email now &darr;<br/>
-        a(href="mailto:truewebartisans@gmail.com") truewebartisans@gmail.com
-    div.item.footer.center
-      p
-        a(href="https://github.com/koddr" target="_blank") GitHub
-        |
-        | ●
-        |
-        a(href="https://instagram.com/true_koddr" target="_blank") Instagram
-        |
-        | ●
-        |
-        a(href="https://medium.com/@koddr" target="_blank") Medium
-
+    div.container#chat-bots-for-messengers
+      div.item
+        h2 ●&nbsp;&nbsp;Chat bots for instant messengers
+        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+          |
+          | sources and analyze them.
+      div.item.center
+        img.char.sticky(alt="Chat bots for instant messengers" src="../images/scribbbles/scribbble_4.svg" lazyload="on")
+    div.container.gradient-black
+      div.item.center
+        h3 Want to follow, give a star or clap? :)
+        div.spacer
+        p No problem, just do it now&nbsp;&darr;<br/>
+          a(href="https://twitter.com/true_koddr" target="_blank") Twitter
+          |
+          | ●
+          |
+          a(href="https://github.com/koddr" target="_blank") GitHub
+          |
+          | ●
+          |
+          a(href="https://medium.com/@koddr" target="_blank") Medium
+      div.item.small-font
+        p &copy;&nbsp;2019 True web artisans. Media & text content by Vic Shóstak.
+        p Do not consider this website as an “offer” on another page of the company. This is a great place
+          |
+          | to meet us and find out how we can be useful to each other.
+        p Our website <strong>does not</strong> uses cookies, like millions of others. Relax.
