--- a/web/src/pug/index.pug
+++ b/web/src/pug/index.pug
@@ -9,7 +9,7 @@ block title
 
 block seo_meta
   meta(name="keywords" content="web development team, web dev team, online business improve")
-  meta(name="description" content="True web artisans — a team of professional product managers, UX specialists, talented developers and designers, who are ready to share their experience to solve your service and business tasks")
+  meta(name="description" content="True web artisans. Team who making: smart backend microservices, progressive web applications, effective business websites, chat bots for instant messengers and many more.")
 
 block content
   section.wrapper.animated.slideInUp
@@ -27,11 +27,11 @@ block content
           | to share our experience to solve your business objectives by:
         ul
           li
-            a(href="/#smart-backend-microservices") Smart backend microservices
+            a(href="/#effective-business-websites") Effective business websites
           li
             a(href="/#progressive-web-applications") Progressive web applications
           li
-            a(href="/#effective-business-websites") Effective business websites
+            a(href="/#smart-backend-microservices") Smart backend microservices
           li
             a(href="/#chat-bots-for-messengers") Chat bots for instant messengers
         div.spacer
@@ -52,26 +52,6 @@ block content
         div.spacer
         p Contact us by public email now&nbsp;&darr;<br/>
           a(href="mailto:truewebartisans@gmail.com") truewebartisans@gmail.com
-    div.container#smart-backend-microservices
-      div.item.center
-        img.char.sticky(alt="Smart backend microservices" src="../images/scribbbles/scribbble_1.svg" lazyload="on")
-      div.item
-        h2 ●&nbsp;&nbsp;Smart backend microservices
-        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
-          |
-          | sources and analyze them.
-    div.container.hero.gradient-gray-inverted
-      div.spacer
-    div.container#progressive-web-applications
-      div.item
-        h2 ●&nbsp;&nbsp;Progressive web applications
-        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
-          |
-          | sources and analyze them.
-      div.item.center
-        img.char.sticky(alt="Progressive web applications" src="../images/scribbbles/scribbble_2.svg" lazyload="on")
-    div.container.hero.gradient-gray
-      div.spacer
     div.container#effective-business-websites
       div.item.center
         img.char.sticky(alt="Effective business websites" src="../images/scribbbles/scribbble_3.svg" lazyload="on")
@@ -80,8 +60,22 @@ block content
         p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
           |
           | sources and analyze them.
-    div.container.hero.gradient-gray-inverted
-      div.spacer
+    div.container#progressive-web-applications
+      div.item
+        h2 ●&nbsp;&nbsp;Progressive web applications
+        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+          |
+          | sources and analyze them.
+      div.item.center
+        img.char.sticky(alt="Progressive web applications" src="../images/scribbbles/scribbble_2.svg" lazyload="on")
+    div.container#smart-backend-microservices
+      div.item.center
+        img.char.sticky(alt="Smart backend microservices" src="../images/scribbbles/scribbble_1.svg" lazyload="on")
+      div.item
+        h2 ●&nbsp;&nbsp;Smart backend microservices
+        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+          |
+          | sources and analyze them.
     div.container#chat-bots-for-messengers
       div.item
         h2 ●&nbsp;&nbsp;Chat bots for instant messengers
@@ -94,7 +88,7 @@ block content
       div.item.center
         h3 Want to follow, give a star or clap? :)
         div.spacer
-        p No problem, just do it now&nbsp;&darr;<br/>
+        p Sure, no problem! Just do it now&nbsp;&darr;<br/>
           a(href="https://twitter.com/true_koddr" target="_blank") Twitter
           |
           | ●
