--- a/web/src/pug/layouts/default.pug
+++ b/web/src/pug/layouts/default.pug
@@ -7,6 +7,11 @@ html(lang="en")
         meta(name="apple-mobile-web-app-capable" content="yes")
         meta(name="mobile-web-app-capable" content="yes")
         meta(name="theme-color" content="#333333")
+        meta(property="og:title" content="True web artisans")
+        meta(property="og:description" content="Team who making: smart backend microservices, progressive web applications, effective business websites, chat bots for instant messengers and many more.")
+        meta(property="og:type" content="article")
+        meta(property="og:url" content="https://1wa.co/")
+        meta(property="og:image" content="https://1wa.co/apple-touch-icon.png")
         block title
         block seo_meta
         link(rel="manifest" href="./manifest.webmanifest")
