--- a/web/src/pug/index.pug
+++ b/web/src/pug/index.pug
@@ -52,38 +52,38 @@ block content
         div.spacer
         p Contact us by public email now&nbsp;&darr;<br/>
           a(href="mailto:truewebartisans@gmail.com") truewebartisans@gmail.com
-    div.container#effective-business-websites
-      div.item.center
-        img.char.sticky(alt="Effective business websites" src="../images/scribbbles/scribbble_3.svg" lazyload="on")
-      div.item
-        h2 ●&nbsp;&nbsp;Effective business websites
-        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
-          |
-          | sources and analyze them.
-    div.container#progressive-web-applications
-      div.item
-        h2 ●&nbsp;&nbsp;Progressive web applications
-        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
-          |
-          | sources and analyze them.
-      div.item.center
-        img.char.sticky(alt="Progressive web applications" src="../images/scribbbles/scribbble_2.svg" lazyload="on")
-    div.container#smart-backend-microservices
-      div.item.center
-        img.char.sticky(alt="Smart backend microservices" src="../images/scribbbles/scribbble_1.svg" lazyload="on")
-      div.item
-        h2 ●&nbsp;&nbsp;Smart backend microservices
-        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
-          |
-          | sources and analyze them.
-    div.container#chat-bots-for-messengers
-      div.item
-        h2 ●&nbsp;&nbsp;Chat bots for instant messengers
-        p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
-          |
-          | sources and analyze them.
-      div.item.center
-        img.char.sticky(alt="Chat bots for instant messengers" src="../images/scribbbles/scribbble_4.svg" lazyload="on")
+    //- div.container#effective-business-websites
+    //-   div.item.center
+    //-     img.char.sticky(alt="Effective business websites" src="../images/scribbbles/scribbble_3.svg" lazyload="on")
+    //-   div.item
+    //-     h2 ●&nbsp;&nbsp;Effective business websites
+    //-     p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+    //-       |
+    //-       | sources and analyze them.
+    //- div.container#progressive-web-applications
+    //-   div.item
+    //-     h2 ●&nbsp;&nbsp;Progressive web applications
+    //-     p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+    //-       |
+    //-       | sources and analyze them.
+    //-   div.item.center
+    //-     img.char.sticky(alt="Progressive web applications" src="../images/scribbbles/scribbble_2.svg" lazyload="on")
+    //- div.container#smart-backend-microservices
+    //-   div.item.center
+    //-     img.char.sticky(alt="Smart backend microservices" src="../images/scribbbles/scribbble_1.svg" lazyload="on")
+    //-   div.item
+    //-     h2 ●&nbsp;&nbsp;Smart backend microservices
+    //-     p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+    //-       |
+    //-       | sources and analyze them.
+    //- div.container#chat-bots-for-messengers
+    //-   div.item
+    //-     h2 ●&nbsp;&nbsp;Chat bots for instant messengers
+    //-     p Today, it's impossible to imagine modern business without a lot of <strong>integrated systems</strong>, that collect data from different
+    //-       |
+    //-       | sources and analyze them.
+    //-   div.item.center
+    //-     img.char.sticky(alt="Chat bots for instant messengers" src="../images/scribbbles/scribbble_4.svg" lazyload="on")
     div.container.gradient-black
       div.item.center
         h3 Want to follow, give a star or clap? :)
@@ -97,9 +97,9 @@ block content
           |
           | ●
           |
-          a(href="https://medium.com/@koddr" target="_blank") Medium
+          a(href="https://dev.to/koddr" target="_blank") Dev.to
       div.item.small-font
-        p &copy;&nbsp;2019 True web artisans. Media & text content by Vic Shóstak.
+        p &copy;&nbsp;2020 True web artisans. Media & text content by Vic Shóstak.
         p Do not consider this website as an “offer” on another page of the company. This is a great place
           |
           | to meet us and find out how we can be useful to each other.
