--- a/frontend/src/pug/index.pug
+++ b/frontend/src/pug/index.pug
@@ -86,7 +86,7 @@ block content
     //-     img.char.sticky(alt="Chat bots for instant messengers" src="../images/scribbbles/scribbble_4.svg" lazyload="on")
     div.container.gradient-black
       div.item.center
-        h3 Want to follow, give a star or clap? :)
+        h3 Want to follow, give a star or unicorn? :)
         div.spacer
         p Sure, no problem! Just do it now&nbsp;&darr;<br/>
           a(href="https://twitter.com/true_koddr" target="_blank") Twitter
