--- a/frontend/src/scss/style.scss
+++ b/frontend/src/scss/style.scss
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 html {
   font-family: $default-font-family;
   font-weight: $default-font-weight;
@@ -17,8 +13,6 @@ html {
 }
 
 body {
-  width: 100%;
-  height: 100%;
   background-color: $grey;
   color: $black;
 }
@@ -125,4 +119,19 @@ a:hover {
 
 .spacer {
   min-height: calc(#{$font-size});
+}
+
+.a2hs__container {
+  animation: slideUp 0.7s ease;
+}
+
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(240px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
