--- a/frontend/src/scss/style.scss
+++ b/frontend/src/scss/style.scss
@@ -13,6 +13,8 @@ html {
 }
 
 body {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
   background-color: $grey;
   color: $black;
 }
