--- a/frontend/src/pug/index.pug
+++ b/frontend/src/pug/index.pug
@@ -19,7 +19,7 @@ block content
         div.spacer
         p Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web developer, UX evangelist,
           |
-          | product manager and founder of this friendly company. Nice to meet you!
+          | DX philosopher, product manager and founder of this friendly company. Nice to meet you!
         div.spacer
         h2 What are we doing?
         p I personally and my team of <strong>IT specialists</strong> around the world&nbsp;&mdash; are ready
