--- a/frontend/src/_includes/css/style.css
+++ b/frontend/src/_includes/css/style.css
@@ -6,10 +6,10 @@
   --line-height: calc(var(--font-size) * 1.5);
 
   /* Color */
-  --black: #404042;
-  --white: #f5f3ee;
-  --grey: #e5e5e5;
-  --green: #27ae60;
+  --black: hsla(240, 2%, 25%, 1);
+  --black-dark: hsla(240, 2%, 19%, 1);
+  --white: hsla(43, 26%, 95%, 1);
+  --green: hsla(145, 63%, 42%, 1);
 }
 
 html {
@@ -100,48 +100,104 @@ p.lead > strong {
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "main aside"
+    "footer footer";
   column-gap: 64px;
 }
-main {
+
+.wrapper > main {
+  grid-area: main;
   padding: 96px 32px 96px 128px;
 }
 
-main > .block {
+.wrapper > main > section {
   margin-bottom: 56px;
 }
 
-aside {
+.wrapper > aside {
+  grid-area: aside;
   padding: 96px 128px 96px 32px;
 }
 
-aside > figure {
+.wrapper > aside > figure {
   position: -webkit-sticky;
   position: sticky;
   top: 24px;
   bottom: 24px;
 }
 
-aside > figure > img.bird {
+.wrapper > aside > figure > img.bird {
   width: 64px;
   margin: 0 auto -20px;
 }
 
-aside > figure > img.boy {
+.wrapper > aside > figure > img.boy {
   width: 460px;
   margin: 0 auto;
 }
 
-aside > figure > img.swoosh {
+.wrapper > aside > figure > img.swoosh {
   width: 320px;
   margin: 24px auto;
 }
 
 @media screen and (prefers-color-scheme: dark) {
-  aside > figure > img {
+  .wrapper > aside > figure > img {
     opacity: 0.75;
     transition: opacity 0.5s ease-in-out;
   }
-  aside > figure > img:hover {
+
+  .wrapper > aside > figure > img:hover {
     opacity: 1;
   }
+}
+
+.wrapper > footer {
+  grid-area: footer;
+  background-color: var(--black);
+  color: var(--white);
+  padding: 96px 128px;
+  font-size: calc(var(--font-size) - 4px);
+}
+
+/* Cookie confirm banner */
+
+.cookie-confirm {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  column-gap: 64px;
+  align-items: center;
+  background-color: var(--black);
+  color: var(--white);
+  font-size: calc(var(--font-size) - 4px);
+  padding: 16px 128px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.cookie-confirm > section:last-child {
+  text-align: center;
+}
+
+.cookie-confirm > section > .cookie-confirm-button {
+  font-size: calc(var(--font-size) - 8px);
+  border: 2px solid var(--white);
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 600;
+  border-radius: 24px;
+  padding: 8px 24px;
+  cursor: pointer;
+}
+
+.cookie-confirm > section > .cookie-confirm-button:hover {
+  background-color: var(--white);
+  color: var(--black);
+}
+
+.cookie-confirm.hidden {
+  display: none;
 }
