--- a/frontend/src/index.njk
+++ b/frontend/src/index.njk
@@ -24,16 +24,16 @@ title: A team of professional product managers, UX specialists, talented develop
       <nav>
         <ul>
           <li>
-            <a href="#ux-review">UX efficiency review</a>
+            <a href="#ux-reviews">UX efficiency reviews</a>
           </li>
           <li>
-            <a href="#ui-design">User-friendly design for web apps</a>
+            <a href="#ui-design">Friendly UI design</a>
           </li>
           <li>
             <a href="#microservices">Smart backend microservices</a>
           </li>
           <li>
-            <a href="#chat-bots">Chat bots for instant messengers</a>
+            <a href="#web-apps">High-quality web apps</a>
           </li>
         </ul>
       </nav>
@@ -50,9 +50,7 @@ title: A team of professional product managers, UX specialists, talented develop
       </p>
       <p>
         The simple magic is based on
-        <strong>Go</strong>
-        (Golang),
-        <strong>Python</strong>, modern
+        <strong>Golang</strong>, modern
         <strong>JavaScript</strong>
         and
         <strong>CSS</strong>. Fast and secure delivery of developed web apps and
