--- a/frontend/src/_includes/partials/cookie-confirm.njk
+++ b/frontend/src/_includes/partials/cookie-confirm.njk
@@ -1,6 +1,11 @@
 <div class="cookie-confirm hidden">
-  <section>Don't worry, we're using cookies, like all others.</section>
   <section>
-    <button type="button" class="cookie-confirm-button">OK!</button>
+    👋&nbsp;&nbsp;Don't worry, we're using cookies to offer you a better
+    browsing experience. Like all others.
+  </section>
+  <section>
+    <button type="button" class="cookie-confirm-button">
+      I Accept Cookies
+    </button>
   </section>
 </div>
