--- a/frontend/src/_includes/css/fonts.css
+++ b/frontend/src/_includes/css/fonts.css
@@ -6,7 +6,7 @@
   font-display: swap;
   font-style: normal;
   font-named-instance: "Regular";
-  src: url("fonts/Inter-roman.var.woff2?v=3.13") format("woff2");
+  src: url("/fonts/Inter-roman.var.woff2?v=3.13") format("woff2");
 }
 
 @font-face {
@@ -15,7 +15,7 @@
   font-display: swap;
   font-style: italic;
   font-named-instance: "Italic";
-  src: url("fonts/Inter-italic.var.woff2?v=3.13") format("woff2");
+  src: url("/fonts/Inter-italic.var.woff2?v=3.13") format("woff2");
 }
 
 /* Normal font */
@@ -25,8 +25,8 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("fonts/Inter-Light.woff2?v=3.13") format("woff2"),
-    url("fonts/Inter-Light.woff?v=3.13") format("woff");
+  src: url("/fonts/Inter-Light.woff2?v=3.13") format("woff2"),
+    url("/fonts/Inter-Light.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -34,8 +34,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("fonts/Inter-Regular.woff2?v=3.13") format("woff2"),
-    url("fonts/Inter-Regular.woff?v=3.13") format("woff");
+  src: url("/fonts/Inter-Regular.woff2?v=3.13") format("woff2"),
+    url("/fonts/Inter-Regular.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -43,8 +43,8 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("fonts/Inter-Medium.woff2?v=3.13") format("woff2"),
-    url("fonts/Inter-Medium.woff?v=3.13") format("woff");
+  src: url("/fonts/Inter-Medium.woff2?v=3.13") format("woff2"),
+    url("/fonts/Inter-Medium.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -52,8 +52,8 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("fonts/Inter-SemiBold.woff2?v=3.13") format("woff2"),
-    url("fonts/Inter-SemiBold.woff?v=3.13") format("woff");
+  src: url("/fonts/Inter-SemiBold.woff2?v=3.13") format("woff2"),
+    url("/fonts/Inter-SemiBold.woff?v=3.13") format("woff");
 }
 
 @font-face {
