--- a/frontend/src/_includes/layouts/base.njk
+++ b/frontend/src/_includes/layouts/base.njk
@@ -6,13 +6,13 @@ js %} {% include "js/script.js" %} {% endset %}
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ seoData.title }} → {{ title }}</title>
-    <meta name="keywords" content="{{ seoData.keywords }}" />
-    <meta name="description" content="{{ seoData.description }}" />
+    <title>{{ seoData.brand_name }} → {{ title }}</title>
+    <meta name="keywords" content="{{ keywords }}" />
+    <meta name="description" content="{{ description }}" />
     <meta name="theme-color" content="#fee04a" />
-    <meta property="og:title" content="{{ seoData.title }}" />
+    <meta property="og:title" content="{{ seoData.brand_name }}" />
     <meta property="og:site_name" content="1wa.co" />
-    <meta property="og:description" content="{{ seoData.description }}" />
+    <meta property="og:description" content="{{ description }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://1wa.co/" />
     <meta property="og:image" content="https://1wa.co/apple-touch-icon.png" />
