--- a/frontend/src/index.njk
+++ b/frontend/src/index.njk
@@ -1,39 +1,48 @@
 ---
 layout: layouts/base.njk
 title: A team of professional product managers, UX specialists, talented developers and UI designers, who are ready to share their experience to solve your business objectives
+description: True web artisans. Team who making UX efficiency review, friendly UI design, smart backend microservices, high-quality web apps and many more.
+keywords: web development team, web dev team, online business improve
 ---
 
 <div class="wrapper">
-  <main>
+  <main aria-label="Main content">
     <header>
       <h1>True web artisans</h1>
       <p class="lead">
-        Hello and welcome! I'm
-        <strong>Vic Shóstak</strong>, fullstack web developer, UX evangelist, DX
-        philosopher, product manager and founder of this friendly company.
+        Hello and welcome! I'm <strong>Vic Shóstak</strong>, fullstack web
+        developer, UX evangelist, DX philosopher, product manager and founder of
+        this friendly company.
       </p>
     </header>
     <section>
       <h2>What are we doing?</h2>
       <p>
         I personally and my team of IT specialists around the world&nbsp;&mdash;
-        are ready to share
-        <strong>our experience</strong>
-        to solve your business objectives by:
+        are ready to share <strong>our experience</strong> to solve your
+        business objectives by:
       </p>
-      <nav>
+      <nav aria-label="Main menu">
         <ul>
           <li>
-            <a href="#ux-reviews">UX efficiency reviews</a>
+            <a href="/ux-reviews.html" title="UX efficiency reviews">
+              UX efficiency reviews
+            </a>
           </li>
           <li>
-            <a href="#ui-design">Friendly UI design</a>
+            <a href="/ui-design.html" title="Friendly UI design">
+              Friendly UI design
+            </a>
           </li>
           <li>
-            <a href="#microservices">Smart backend microservices</a>
+            <a href="/microservices.html" title="Smart backend microservices">
+              Smart backend microservices
+            </a>
           </li>
           <li>
-            <a href="#web-apps">High-quality web apps</a>
+            <a href="/web-apps.html" title="High-quality web apps">
+              High-quality web apps
+            </a>
           </li>
         </ul>
       </nav>
@@ -43,27 +52,21 @@ title: A team of professional product managers, UX specialists, talented develop
       <p>
         First of all, we are developers who know a lot about DX and support
         large projects in the long run. Therefore, all of our projects have
-        <strong>excellent</strong>
-        documentation and
-        <strong>clear</strong>
+        <strong>excellent</strong> documentation and <strong>clear</strong>
         code. It's important!
       </p>
       <p>
-        The simple magic is based on
-        <strong>Golang</strong>, modern
-        <strong>JavaScript</strong>
-        and
-        <strong>CSS</strong>. Fast and secure delivery of developed web apps and
-        microservices to any servers by
-        <strong>Docker</strong>
-        containers.
+        The simple magic is based on <strong>Golang</strong>, modern
+        <strong>JavaScript</strong> and <strong>CSS</strong>. Fast and secure
+        delivery of developed web apps and microservices to any servers by
+        <strong>Docker</strong> containers.
       </p>
     </section>
   </main>
-  <aside>
+  <aside aria-label="Secondary graphics">
     {% include "partials/logo.njk" %}
   </aside>
-  <footer>
+  <footer aria-label="Footer">
     {% include "partials/footer.njk" %}
   </footer>
 </div>
